Project

General

Profile

Actions

Bug #16045

closed

rbd-mirror does not handle multiple replicated pools

Added by Jason Dillaman almost 8 years ago. Updated almost 8 years ago.

Status:
Resolved
Priority:
High
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

I created two replicated pools and added a single image to only one pool. The rbd-mirror daemon started two Replayers, each of which attempted to concurrently replicate the single image in the single pool.


Related issues 1 (0 open1 closed)

Copied to rbd - Backport #16068: jewel: rbd-mirror does not handle multiple replicated poolsResolvedJason DillamanActions
Actions #1

Updated by Jason Dillaman almost 8 years ago

  • Status changed from In Progress to Fix Under Review
Actions #2

Updated by Mykola Golub almost 8 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Jason Dillaman almost 8 years ago

  • Copied to Backport #16068: jewel: rbd-mirror does not handle multiple replicated pools added
Actions #4

Updated by Jason Dillaman almost 8 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF