src/tools/rbd_mirror/Replayer.h
@@ -34,7 +34,7 @@ class MirrorStatusWatchCtx;
 class Replayer {
 public:
   Replayer(Threads *threads, std::shared_ptr<ImageDeleter> image_deleter,
-           RadosRef local_cluster, const peer_t &peer,
+           RadosRef local_cluster, int64_t local_pool_id, const peer_t &peer,
            const std::vector<const char*> &args);
   ~Replayer();
   Replayer(const Replayer&) = delete;
@@ -50,18 +50,18 @@ public:
   void flush();
 
 private:
+  typedef PoolWatcher::ImageId ImageId;
   typedef PoolWatcher::ImageIds ImageIds;
-  typedef PoolWatcher::PoolImageIds PoolImageIds;
 
   void init_local_mirroring_images();
-  void set_sources(const PoolImageIds &pool_image_ids);
+  void set_sources(const ImageIds &image_ids);
 
   void start_image_replayer(unique_ptr<ImageReplayer<> > &image_replayer,
                             const boost::optional<std::string>& image_name);
   bool stop_image_replayer(unique_ptr<ImageReplayer<> > &image_replayer);
 
-  int mirror_image_status_init(int64_t pool_id, librados::IoCtx& ioctx);
-  void mirror_image_status_shut_down(int64_t pool_id);
+  int mirror_image_status_init();
+  void mirror_image_status_shut_down();
 
   Threads *m_threads;
   std::shared_ptr<ImageDeleter> m_image_deleter;
@@ -72,35 +72,39 @@ private:
 
   peer_t m_peer;
   std::vector<const char*> m_args;
-  RadosRef m_local, m_remote;
+  RadosRef m_local;
+  RadosRef m_remote;
+
+  librados::IoCtx m_local_io_ctx;
+  librados::IoCtx m_remote_io_ctx;
+
+  int64_t m_local_pool_id = -1;
+  int64_t m_remote_pool_id = -1;
+
   std::unique_ptr<PoolWatcher> m_pool_watcher;
-  // index by pool so it's easy to tell what is affected
-  // when a pool's configuration changes
-  std::map<int64_t, std::map<std::string,
-			     std::unique_ptr<ImageReplayer<> > > > m_images;
-  std::map<int64_t, std::unique_ptr<MirrorStatusWatchCtx> > m_status_watchers;
+  std::map<std::string, std::unique_ptr<ImageReplayer<> > > m_image_replayers;
+  std::unique_ptr<MirrorStatusWatchCtx> m_status_watcher;
+
   ReplayerAdminSocketHook *m_asok_hook;
   struct InitImageInfo {
     std::string global_id;
-    int64_t pool_id;
     std::string id;
     std::string name;
 
-    InitImageInfo(const std::string& global_id, int64_t pool_id = 0,
-             const std::string &id = "", const std::string &name = "")
-      : global_id(global_id), pool_id(pool_id), id(id), name(name) {
+    InitImageInfo(const std::string& global_id, const std::string &id = "",
+                  const std::string &name = "")
+      : global_id(global_id), id(id), name(name) {
     }
 
     inline bool operator==(const InitImageInfo &rhs) const {
-      return (global_id == rhs.global_id && pool_id == rhs.pool_id &&
-              id == rhs.id && name == rhs.name);
+      return (global_id == rhs.global_id && id == rhs.id && name == rhs.name);
     }
     inline bool operator<(const InitImageInfo &rhs) const {
       return global_id < rhs.global_id;
     }
   };
 
-  std::map<int64_t, std::set<InitImageInfo> > m_init_images;
+  std::set<InitImageInfo> m_init_images;
 
   class ReplayerThread : public Thread {
     Replayer *m_replayer;
